--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "repository": "Permissionless-Software-Foundation/bridge-faucet",
   "dependencies": {
     "@psf/bch-js": "^4.18.1",
+    "avalanche": "^3.3.0",
     "axios": "^0.21.1",
     "bch-util": "^1.2.5",
     "bcryptjs": "^2.4.3",
